stop horizontal scroll on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,13 @@
 
 html {
   background-color: #5ba2aa;
+  overflow-x: hidden;
 }
 
 body {
   background-color: #F2F1F1;
   overflow-x: hidden;
+  position: relative
 }
 
 @font-face {
@@ -213,7 +215,7 @@ body {
   padding: 32px 0;
   background-color: #5ba2a9;
   z-index: 10;
-  margin-top: 30px;
+  margin-top: 0px;
 }
 
 .g-and-m .row {
@@ -270,7 +272,7 @@ body {
 }
 
 .hart {
-  padding: 132px 0 48px;
+  padding: 96px 0 28px;
   text-align: center;
 }
 
